--- a/app/config/parametersAdmission.yml
+++ b/app/config/parametersAdmission.yml
@@ -1,13 +1,13 @@
 parameters:
-    database_driver: pdo_mysql
-    database_host: 127.0.0.1
-    database_port: null
-    database_name: admissions
-    database_user: root
-    database_password: admin
-    mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
-    locale: en
-    secret: 50cf7f4e67a3670b8a76516383c95a80600c60ed
+    database_driver2: pdo_mysql
+    database_host2: 127.0.0.1
+    database_port2: null
+    database_name2: admissions
+    database_user2: root
+    database_password2: admin
+    mailer_transport2: smtp
+    mailer_host2: 127.0.0.1
+    mailer_user2: null
+    mailer_password2: null
+    locale2: en
+    secret2: 50cf7f4e67a3670b8a76516383c95a80600c60ed
