--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ app/bootstrap.php.cache
 app/bootstrap_cache.php.cache
 app/config/parameters.ini
 app/config/parameters.yml
+app/config/parametersAdmission.yml
 app/cache/*
 app/logs/*
 app/config/*
