--- a/app/config/parametersAdmission.yml
+++ b/app/config/parametersAdmission.yml
@@ -3,8 +3,8 @@ parameters:
     database_host2: 127.0.0.1
     database_port2: null
     database_name2: admissions
-    database_user2: root
-    database_password2: admin
+    database_user2: admissions
+    database_password2: trali20ausa
     mailer_transport2: smtp
     mailer_host2: 127.0.0.1
     mailer_user2: null
